# imxrt_getting_started

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
